--- a/base/html/map_crossroad_view.html
+++ b/base/html/map_crossroad_view.html
@@ -312,75 +312,78 @@
 
           <section class="license-plate-recognition">
             <em class="tit">차량 번호 인식</em>
-
-            <table class="tbl-custom-radio-container">
-              <colgroup>
-                <col style="width: 90px" />
-                <col />
-              </colgroup>
-              <tbody>
-                <tr>
-                  <th>채널 1</th>
-                  <td>
-                    <div class="custom-radio-rectangle-two">
-                      <label>
-                        <input type="radio" name="ch2-1" />
-                        <span class="txt">보기</span>
-                      </label>
-                      <label>
-                        <input type="radio" name="ch2-1" />
-                        <span class="txt">숨기기</span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>채널 2</th>
-                  <td>
-                    <div class="custom-radio-rectangle-two">
-                      <label>
-                        <input type="radio" name="ch2-2" />
-                        <span class="txt">보기</span>
-                      </label>
-                      <label>
-                        <input type="radio" name="ch2-2" />
-                        <span class="txt">숨기기</span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>채널 3</th>
-                  <td>
-                    <div class="custom-radio-rectangle-two">
-                      <label>
-                        <input type="radio" name="ch2-3" disabled />
-                        <span class="txt">보기</span>
-                      </label>
-                      <label>
-                        <input type="radio" name="ch2-3" disabled />
-                        <span class="txt">숨기기</span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>채널 4</th>
-                  <td>
-                    <div class="custom-radio-rectangle-two">
-                      <label>
-                        <input type="radio" name="ch2-4" />
-                        <span class="txt">보기</span>
-                      </label>
-                      <label>
-                        <input type="radio" name="ch2-4" />
-                        <span class="txt">숨기기</span>
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+            <!-- 231106 tbl-custom-radio-wrap div 추가 -->
+            <div class="tbl-custom-radio-wrap">
+              <table class="tbl-custom-radio-container">
+                <colgroup>
+                  <col style="width: 90px" />
+                  <col />
+                </colgroup>
+                <tbody>
+                  <tr>
+                    <th>채널 1</th>
+                    <td>
+                      <div class="custom-radio-rectangle-two">
+                        <label>
+                          <input type="radio" name="ch2-1" />
+                          <span class="txt">보기</span>
+                        </label>
+                        <label>
+                          <input type="radio" name="ch2-1" />
+                          <span class="txt">숨기기</span>
+                        </label>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>채널 2</th>
+                    <td>
+                      <div class="custom-radio-rectangle-two">
+                        <label>
+                          <input type="radio" name="ch2-2" />
+                          <span class="txt">보기</span>
+                        </label>
+                        <label>
+                          <input type="radio" name="ch2-2" />
+                          <span class="txt">숨기기</span>
+                        </label>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>채널 3</th>
+                    <td>
+                      <div class="custom-radio-rectangle-two">
+                        <label>
+                          <input type="radio" name="ch2-3" disabled />
+                          <span class="txt">보기</span>
+                        </label>
+                        <label>
+                          <input type="radio" name="ch2-3" disabled />
+                          <span class="txt">숨기기</span>
+                        </label>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>채널 4</th>
+                    <td>
+                      <div class="custom-radio-rectangle-two">
+                        <label>
+                          <input type="radio" name="ch2-4" />
+                          <span class="txt">보기</span>
+                        </label>
+                        <label>
+                          <input type="radio" name="ch2-4" />
+                          <span class="txt">숨기기</span>
+                        </label>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <!-- //tbl-custom-radio-wrap -->
           </section>
           <!-- //license-plate-recognition -->
 
