1. 교차로 : 통계 교차로 유/출입 교통량 컨텐츠 사이즈 수정 2. 횡단보도 : 시스템 관리 > 맵 설정 및 카메라 정보 설정(상세/추가/수정) 팝업 작업

--- a/base/html/index.html
+++ b/base/html/index.html
@@ -1877,7 +1877,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/cw/cw_map_setting.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -1891,7 +1891,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/cw/cw_camera_map_view.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo">
                             <ul style="font-weight: bold">
@@ -1909,7 +1909,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/cw/cw_camera_map_add.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo">
                             <ul style="font-weight: bold">
@@ -1927,7 +1927,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/cw/cw_camera_map_edit.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo">
                             <ul style="font-weight: bold">
@@ -2267,7 +2267,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/cw/scenario_equipment_set.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
