<횡단보도> 1. 시나리오 항목 정의 목록 input태그로 변경 2. 차량 ROI/보행자 ROI 화면 작업

--- a/base/html/cw/cw_signal_info_view.html
+++ b/base/html/cw/cw_signal_info_view.html
@@ -49,9 +49,9 @@
                   <td colspan="3">비신호</td>
                 </tr>
                 <tr>
-                  <th>교차로 번호</th>
+                  <th>보행신호 방향</th>
                   <td>50</td>
-                  <th>교차로 현시 개수</th>
+                  <th>차량신호 방향</th>
                   <td>5</td>
                 </tr>
               </tbody>
