--- a/base/html/cw/scenario_item_set.html
+++ b/base/html/cw/scenario_item_set.html
@@ -175,15 +175,39 @@
                         <tbody>
                           <tr>
                             <td>1</td>
-                            <td>보행신호</td>
-                            <td>적색</td>
-                            <td>녹색</td>
+                            <td>
+                              <div class="ui input rounded center xs">
+                                <input type="text" value="보행신호" style="width: 150px" />
+                              </div>
+                            </td>
+                            <td>
+                              <div class="ui input rounded center xs">
+                                <input type="text" value="적색" style="width: 110px" />
+                              </div>
+                            </td>
+                            <td>
+                              <div class="ui input rounded center xs">
+                                <input type="text" value="녹색" style="width: 90px" />
+                              </div>
+                            </td>
                           </tr>
                           <tr>
                             <td>2</td>
-                            <td>보행신호</td>
-                            <td>적색</td>
-                            <td>녹색</td>
+                            <td>
+                              <div class="ui input rounded center xs">
+                                <input type="text" value="보행신호" style="width: 150px" />
+                              </div>
+                            </td>
+                            <td>
+                              <div class="ui input rounded center xs">
+                                <input type="text" value="적색" style="width: 110px" />
+                              </div>
+                            </td>
+                            <td>
+                              <div class="ui input rounded center xs">
+                                <input type="text" value="녹색" style="width: 90px" />
+                              </div>
+                            </td>
                           </tr>
                         </tbody>
                       </table>
