--- a/base/html/index.html
+++ b/base/html/index.html
@@ -2155,7 +2155,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/cw/cw_roiset_tab.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
