--- a/base/html/is/crossroads_stats_main.html
+++ b/base/html/is/crossroads_stats_main.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>교차로 상세 통계</title>
+    <title>교차로 통계</title>
     <script src="/base/js/lib/jquery-3.5.1.min.js"></script>
     <script src="/base/js/lib/jquery-ui.min.js"></script>
     <script src="/base/js/lib/semantic.min.js"></script>
@@ -37,7 +37,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">통계</span>
               <i class="right angle icon divider"></i>
-              <div class="section">교차로 상세 통계</div>
+              <div class="section">교차로 통계</div>
             </div>
             <!-- //breadcrumb -->
             <div class="main-stats-container">
@@ -88,9 +88,10 @@
               <!-- //filter-grouop -->
 
               <section class="summary-info-wrap">
-                <em class="tit">교차로 통계 요약 정보</em>
+                <em class="tit">태릉입구역</em>
                 <article class="summary-info-display">
-                  <em class="tit">태릉입구역</em>
+                  <!-- 231119 타이틀 영역 삭제 -->
+                  <!-- <em class="tit">태릉입구역</em> -->
                   <ul class="summary-info-item-wrap">
                     <li>
                       <em class="tit">총 교통량</em>
@@ -105,26 +106,27 @@
                       <em class="tit">방향 별 교통량</em>
                       <div class="tbl-bind">
                         <table>
+                          <!-- 231119 colgroup 수정 -->
                           <colgroup>
-                            <col style="width: 50%" />
-                            <col style="width: 50%" />
+                            <col style="width: 170px" />
+                            <col />
                           </colgroup>
                           <tbody>
                             <tr>
-                              <th><span>도로명도로명도로명도</span></th>
-                              <td><span>(북동)</span><em>220,555</em> 대</td>
+                              <th><span>도로명도로명도로명도도로명도</span></th>
+                              <td><span>북동</span><em>220,555</em> 대</td>
                             </tr>
                             <tr>
                               <th><span>가산디지털1로</span></th>
-                              <td><span>(동)</span><em>1,555</em> 대</td>
+                              <td><span>동</span><em>1,555</em> 대</td>
                             </tr>
                             <tr>
                               <th><span>화랑로</span></th>
-                              <td><span>(남)</span><em>65</em> 대</td>
+                              <td><span>남</span><em>65</em> 대</td>
                             </tr>
                             <tr>
                               <th><span>도로명도로명</span></th>
-                              <td><span>(북)</span><em>220,555</em> 대</td>
+                              <td><span>북</span><em>220,555</em> 대</td>
                             </tr>
                           </tbody>
                         </table>
@@ -134,10 +136,10 @@
                       <em class="tit">차종 별 교통량</em>
                       <div class="tbl-bind">
                         <table>
-                          <!-- 230928: col width값 수정 -->
+                          <!-- 231119 col width값 수정 -->
                           <colgroup>
-                            <col style="width: 45%" />
-                            <col style="width: 55%" />
+                            <col style="width: 47%" />
+                            <col style="width: 53%" />
                           </colgroup>
                           <tbody>
                             <tr>
@@ -168,9 +170,10 @@
                       <em class="tit">서비스 수준</em>
                       <div class="tbl-bind">
                         <table>
+                          <!-- 231119 col width값 수정 -->
                           <colgroup>
-                            <col style="width: 35%" />
-                            <col style="width: 65%" />
+                            <col style="width: 50%" />
+                            <col style="width: 50%" />
                           </colgroup>
                           <tbody>
                             <tr>
