1. 교차로 > 상세 통계, 비교 통계화면 css 수정 2. 교차로 비교 통계 화면 차트영역 css 수정 3. 지점 맵 설정(지점 아이콘) 및 카메라 맵 설정(카메라, 레이더, 신호등,    LOS) 드래그 말풍선 가이드 추가

--- a/base/html/is/map_setting.html
+++ b/base/html/is/map_setting.html
@@ -131,44 +131,55 @@
 
           <!-- 230918 카메라 아이콘의 left, top, right, bottom 클래스 삭제 -->
           <!-- 230928 data-target 속성 삭제 및 js-no-dimed-popup-call 클래스 삭제  -->
+          <!-- 231121 안내 말풍선 추가(카메라, 레이더, 신호등, LOS) -->
           <i class="ico-map-above-camera" style="left: 717px; top: 555px">
             <span class="screen-out">좌측 카메라</span>
+            <i class="speech-bubble-guide7"><span class="screen-out">카메라를 드래그하여 원하시는 위치로 이동시키세요</span></i>
           </i>
 
           <i class="ico-map-above-camera" style="left: 818px; top: 440px">
             <span class="screen-out">상단 카메라</span>
+            <i class="speech-bubble-guide7"><span class="screen-out">카메라를 드래그하여 원하시는 위치로 이동시키세요</span></i>
           </i>
 
           <i class="ico-map-above-camera" style="left: 954px; top: 543px">
             <span class="screen-out">우측 카메라</span>
+            <i class="speech-bubble-guide7"><span class="screen-out">카메라를 드래그하여 원하시는 위치로 이동시키세요</span></i>
           </i>
 
           <i class="ico-map-above-camera" style="left: 820px; top: 700px">
             <span class="screen-out">하단 카메라</span>
+            <i class="speech-bubble-guide7"><span class="screen-out">카메라를 드래그하여 원하시는 위치로 이동시키세요</span></i>
           </i>
 
           <!-- 230928 레이더 아이콘 추가 -->
           <i class="ico-map-above-radar" style="left: 1000px; top: 300px">
             <span class="screen-out">레이더</span>
+            <i class="speech-bubble-guide8"><span class="screen-out">레이더를 드래그하여 원하시는 위치로 이동시키세요</span></i>
           </i>
           <i class="ico-map-above-radar" style="left: 1100px; top: 300px">
             <span class="screen-out">레이더</span>
+            <i class="speech-bubble-guide8"><span class="screen-out">레이더를 드래그하여 원하시는 위치로 이동시키세요</span></i>
           </i>
 
           <!-- 230928 신호등 아이콘 추가(나머지 신호등 아이콘들은 map_crossroad_view.html 참고) -->
           <i class="ico-vehicle-signal red" style="top: 220px; left: 500px">
             <span class="screen-out">빨간불</span>
+            <i class="speech-bubble-guide9"><span class="screen-out">신호등을 드래그하여 원하시는 위치로 이동시키세요</span></i>
           </i>
           <i class="ico-vehicle-signal red-yellow" style="top: 300px; left: 500px">
             <span class="screen-out">빨간불/노란불</span>
+            <i class="speech-bubble-guide9"><span class="screen-out">신호등을 드래그하여 원하시는 위치로 이동시키세요</span></i>
           </i>
 
           <!-- 230928 LOS 아이콘 추가 -->
           <i class="ico-map-above-los" style="left: 1100px; top: 500px">
             <span class="screen-out">LOS</span>
+            <i class="speech-bubble-guide10"><span class="screen-out">LOS를 드래그하여 원하시는 위치로 이동시키세요</span></i>
           </i>
           <i class="ico-map-above-los" style="left: 1200px; top: 500px">
             <span class="screen-out">LOS</span>
+            <i class="speech-bubble-guide10"><span class="screen-out">LOS를 드래그하여 원하시는 위치로 이동시키세요</span></i>
           </i>
         </div>
         <!-- //ly-map -->
