교차로 대시보드A 화면 작업

--- a/base/html/index.html
+++ b/base/html/index.html
@@ -322,6 +322,34 @@
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
                           <td class="col-1depth"></td>
+                          <td class="col-2depth">교차로 대시보드A</td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/dashboard_cr_a.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth">교차로 대시보드B</td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/dashboard_cr_b.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
                           <td class="col-2depth">횡단보도 현황</td>
                           <td class="col-3depth"></td>
                           <td class="col-4depth"></td>
